# Laqista

./: .gitignore  Cargo.toml  README.md  bench.sh  build.rs  flake.nix
apps/face/: Cargo.toml  README.md  build.rs
apps/face-wasm/: Cargo.toml  build.rs
apps/face-wasm/.cargo/: config.toml
apps/face-wasm/src/: interface.rs  lib.rs  memory.rs
apps/face/benches/: onnx.rs  wasm.rs
apps/face/models/: softmax-11.onnx  softmax-15.onnx
apps/face/src/: detector.rs  lib.rs  main.rs  proto.rs  server.rs  tensor.rs
apps/hello/: Cargo.toml  build.rs
apps/hello/src/: lib.rs
benches/: face-image.rs  greeter.rs
benchmark/: bench.py
data/: infer.json  run_detection.json
data/benchmark-results/mac_2024-12-03_b244650/Face image/_client_/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Face image/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm deserialize/base/: benchmark.json  sample.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm deserialize/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate heavy/change/: estimates.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner heavy async/base/: benchmark.json  sample.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner heavy async/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner heavy/change/: estimates.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner heavy/new/: benchmark.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner with memory (JPEG)/base/: estimates.json  tukey.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate runner with memory (JPEG)/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate with memory (1kB)/base/: tukey.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate with memory (1kB)/new/: estimates.json  sample.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate with memory (JPEG)/new/: estimates.json  sample.json  tukey.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate/base/: benchmark.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm instantiate/wasm instantiate/change/: estimates.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm memory/wasm read memory heavy/report/: index.html
data/benchmark-results/mac_2024-12-03_b244650/Wasm memory/wasm read memory in wasm/new/: sample.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm memory/wasm write memory heavy/base/: estimates.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm memory/wasm write memory heavy/new/: sample.json  tukey.json
data/benchmark-results/mac_2024-12-03_b244650/Wasm memory/wasm write memory/base/: sample.json
data/benchmark-results/mac_2024-12-03_b584792/Face wasm/report/: index.html
data/benchmark-results/mac_2024-12-03_b584792/Wasm instantiate/report/: index.html
data/benchmark-results/mac_2024-12-03_b584792/report/: index.html
data/benchmark/Face image/face image direct/_client_/new/: sample.json  (+1 more)
data/benchmark/Greeter/report/: index.html
data/benchmark/Wasm instantiate/wasm instantiate heavy/new/: benchmark.json
data/benchmark/Wasm instantiate/wasm instantiate heavy/report/: index.html
data/benchmark/Wasm instantiate/wasm instantiate runner heavy async/change/: estimates.json
data/benchmark/Wasm instantiate/wasm instantiate runner heavy async/new/: estimates.json  tukey.json
data/benchmark/Wasm instantiate/wasm instantiate runner heavy/new/: tukey.json
data/benchmark/Wasm instantiate/wasm instantiate runner/base/: benchmark.json  sample.json  tukey.json
data/benchmark/Wasm instantiate/wasm instantiate runner/new/: estimates.json
data/benchmark/Wasm instantiate/wasm instantiate runner/report/: index.html
data/benchmark/Wasm instantiate/wasm instantiate with memory (1kB)/report/: index.html
data/benchmark/Wasm instantiate/wasm instantiate with memory (JPEG)/base/: benchmark.json
data/benchmark/Wasm instantiate/wasm instantiate/base/: sample.json  tukey.json
data/benchmark/Wasm memory/report/: index.html
data/benchmark/Wasm memory/wasm read memory heavy/base/: tukey.json
data/benchmark/Wasm memory/wasm read memory heavy/change/: estimates.json
data/benchmark/Wasm memory/wasm read memory heavy/new/: benchmark.json  estimates.json
data/benchmark/Wasm memory/wasm read memory in wasm/base/: benchmark.json
data/benchmark/Wasm memory/wasm read memory in wasm/new/: estimates.json
data/benchmark/Wasm memory/wasm write memory heavy/change/: estimates.json
data/benchmark/Wasm memory/wasm write memory heavy/new/: benchmark.json
data/benchmark/Wasm memory/wasm write memory/report/: index.html
data/benchmark/report/: index.html
data/models/: softmax-ir8.onnx  softmax.onnx
k6/: script.js
laqista-core/: Cargo.toml  build.rs
laqista-core/src/: client.rs  lib.rs  proto.rs  server.rs  session.rs  wasm.rs
mless-core/: Cargo.toml
mless-core/src/: lib.rs  server.rs  tensor.rs  wasm.rs
proto/: app.proto  face.proto  hello.proto  host.proto  laqista.proto  mless.proto
scripts/: pyproject.toml
src/: bench.rs  cmd.rs  error.rs  lib.rs  main.rs  main2.rs  monitor.rs  proxy.rs  report.rs  scheduler.rs  server.rs  utils.rs
src/app/: mod.rs
src/deployment/: database.rs  fs.rs  http.rs  mod.rs
src/interface/: mod.rs  session.rs  tensor.rs
src/monitor/: apple.rs  common.rs  darwin.rs  mod.rs
src/monitor/linux/: mod.rs  nvidia.rs  parse.rs  radeon.rs
src/scheduler/: dew.rs  fog.rs  interface.rs  mean.rs  round.rs  stats.rs  uninit.rs
src/server/: cmd.rs  middleware.rs  mod.rs  run.rs  server.rs
tests/: face.rs  wasm.rs
utils/: create-softmax.py  downgrade.py  merge-softmax.py  print-model.py  start.sh  up-downgrade.py
(+134 files in other folders)
