[package]
name = "mless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[dependencies]
axum = "0.6.9"
bytes = "1.1.0"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
h2 = "0.3.24"
http-body = "0.4.4"
http-body-util = "0.1"
hyper = { version = "0.14.26", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
tonic = "0.11.0"
prost = "0.12"
prost-types = "0.12.3"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "v6", "std", "rng"] }
mac_address = "1.1.5"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }

[build-dependencies]
tonic-build = "0.11"
