[package]
name = "mless"
version = "0.1.0"
edition = "2021"

[workspace]
# members = ["apps/*"]
members = [ "apps/face-wasm", "apps/hello", "mless-core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[features]
default = ["face"]
face = ["dep:face"]

[dependencies]
axum = "0.6.9"
bytes = "1.1.0"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
h2 = "0.3.24"
http-body = "0.4.4"
http-body-util = "0.1"
hyper = { version = "0.14.26", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
nom = "7.1.3"
tonic = "0.11.0"
prost = "0.12"
prost-types = "0.12.3"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "v6", "std", "rng"] }
mac_address = "1.1.5"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
plist = { version = "1.6.1", features = ["serde"] }

hello = { path = "./apps/hello" }
chrono = "0.4.38"
face = { path = "./apps/face", optional = true }
local-ip-address = "0.6.3"
reqwest = "0.12.9"
tar = "0.4.43"
flate2 = "1.0.34"

mless-core = { version = "0.1.0", path = "./mless-core" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
image = "0.25.2"
ndarray = "0.15.6"

[[bench]]
name = "greeter"
harness = false

[[bench]]
name = "face-image"
harness = false

[patch.crates-io]
v_frame = { git = "https://github.com/kino-ma/v_frame.git", branch = "feature-wasm" }
