[package]
name = "mless-core"
version = { workspace = true }
edition = "2021"

[features]
tokio = ["dep:tokio"]

[dependencies]
bytes = "1.1.0"
prost = "0.12"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"], optional = true }
tonic = "0.11.0"
uuid = { version = "1.8.0", features = ["v4", "v6", "std", "rng"] }
wasmer = "4.3.5"
wonnx = "0.5.1"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
tonic = "0.11.0"