[package]
name = "face-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.2"
ndarray = "0.15.6"
prost = { version = "0.12", features = ["derive"], default-features = false }
tonic = { version = "0.11.0", features = ["codegen", "prost"], default-features = false }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"], default-features = false }
tonic = "0.11.0"
