[package]
name = "face"
version = "0.1.0"
edition = "2021"

[dependencies]
# opencv = { version = "0.92.0", features = ["clang-runtime"] }
# opencv = { git = "https://github.com/kino-ma/opencv-rust.git", branch = "exit-on-version-parse-failure" }
# opencv = { path = "../../../opencv-rust" }
# opencv = { git = "https://github.com/kino-ma/opencv-rust.git", branch = "debug-version" }
opencv = { git = "https://github.com/kino-ma/opencv-rust.git", branch = "debug-version", features = ["clang-runtime"] }
prost = "0.12"
prost-types = "0.12.3"
tonic = "0.11.0"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"

[build-dependencies]
tonic-build = "0.11"