[package]
name = "face"
version = { workspace = true }
edition = "2021"

[dependencies]
prost = "0.12"
prost-types = "0.12.3"
tonic = "0.11.0"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
wonnx = "0.5.1"
ndarray = "0.15.6"
image = "0.25.1"
serde = { version = "1.0.204", features = ["derive"] }
mless-core = { version = "0.1.0", path = "../../mless-core" }
wasmer = "4.3.5"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "wasm"
harness = false